styles.css
body, html {
    height: 100%;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

*, *::before, *::after{
    box-sizing: inherit;
}

a:link, a:visited {
    color: inherit;
}

body, div#logo-container {
    display: flex;
}

div#right, div#hero, form, div.input {
    display: flex;
    flex-direction: column;
}

div#left {
    flex: 37.5;
    position: relative;
    background-image: url(./halie-west-25xggax4bSA-unsplash.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    min-width: 0;
}

div#right {
    flex: 62.5;
    font-family: Arial, Helvetica, sans-serif;
}

img#sidebar-image {
    width: 100%;
    height: auto;
    position: absolute;
    z-index: -1;
}

div#logo-container {
    position: absolute;
    top: 20%;
    width: 100%;
    background: rgb( 0 0 0 / 40%);
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

div#left p {
    position: absolute;
    font-family: Arial, Helvetica, sans-serif;
    font-size: clamp(0.5rem, 1.5vw, 0.75rem);
    font-weight: 100;
    color: white;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
    width: max(100%, 240px);
}

div#logo-container img {
    width: clamp(3rem, 7vw, 7.5rem);
    height: auto;
    margin: 0.7rem 0 0.7rem 0;
}

@font-face {
    font-family: "Norse";
    src: 
        url(./font/Norse.woff) format("woff"),
        url(./font/Norse.woff2) format("woff2");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Norse";
    src: 
        url(./font/Norse-Bold.woff) format("woff"),
        url(./font/Norse-Bold.woff2) format("woff2");
    font-weight: bold;
    font-style: normal;
}

div#logo-container h1 {
    color: white;
    font-family: "Norse";
    font-size: clamp(3rem, 7vw, 7.5rem);
    margin: 0;
}

div#hero {
    background-color: #f9fafb;
    flex: 1;
}

form {
    background-color: #ffffff;
    flex: 0;
    box-shadow: 0 0.3rem 0.3rem 0 rgb( 0 0 0 / 15%);
    position: relative;
    z-index: 1;
    gap: 1.5rem;
    padding: 1rem 3rem 2.5rem 3rem;
}

div#button-container {
    background-color: #f9fafb;
    flex: 1;
    padding: 2.5rem 0 0 3rem;
}

div#hero p {
    width: min(75ch, 75%);
    margin: auto 3rem 4rem 3rem;
    font-size: 1.5rem;
    font-weight: 550;
}

div.form-row {
    display: flex;
    gap: clamp(3rem, 5vw, 4rem);
}

form p {
    font-size: 1.5rem;
    font-weight: 550;
    margin: 0;
}

input, button {
    font-family: inherit;
    font-size: 100%;
}

label {
    font-size: 0.75rem;
    letter-spacing: 2px;
    margin-bottom: 2px;
}

input {
    height: 30px;
    width: clamp(165px, 25vw, 260px);
    border: 1px solid #E5E7EB;
    border-radius: 5px;
    padding-left: 10px;
}

input:user-invalid {
    outline: none;
    border-color: red;
}

input:focus {
    outline: none;
    border-color: #527bd7;
    box-shadow: 2px 2px 5px 0 rgb( 0 0 0 / 30%);
}

button {
    width: 240px;
    height: 50px;
    border: none;
    border-radius: 10px;
    box-shadow: 2px 2px 5px 0 rgb( 0 0 0 / 30%);
    background-color: #596D48;
    color: white;
    font-size: 1.2rem;
}

button:hover {
    cursor: pointer;
    background-color: #475739;
}

div#button-container p {
    margin-top: 3rem;
    font-size: 1.2rem;
}

a#log-in {
    text-decoration: none;
    font-weight: bold;
    color: #596D48;
}

a#log-in:hover {
    color: #5c486d;
}

